--- a/fingrid/maubot.yaml
+++ b/fingrid/maubot.yaml
@@ -1,8 +1,10 @@
 maubot: 0.1.0
 id: fi.24-7.maubot-fingrid
-version: 0.3.79
+version: 0.3.84
 name: Fingrid electricity status
 description: Fetches electricity status from Fingrid's API
 main_class: FingridPlugin
 modules:
   - fingrid_plugin
+extra_files:
+  - base-config.yaml
