--- a/chatgpt/base-config.yaml
+++ b/chatgpt/base-config.yaml
@@ -3,4 +3,5 @@ api-key: ""
 bot-name: "" # Matrix ID, f.ex @test:test.io
 bot-display-name: "" # Display name, f.ex Test
 model: "gpt-4o-mini"
+allowed_models: ["o1-mini", "gpt-4o-mini", "gpt-4o"]
 vat: 1.255
