--- a/chatgpt/base-config.yaml
+++ b/chatgpt/base-config.yaml
@@ -4,4 +4,5 @@ bot-name: "" # Matrix ID, f.ex @test:test.io
 bot-display-name: "" # Display name, f.ex Test
 model: "gpt-4o-mini"
 allowed_models: ["o1-mini", "gpt-4o-mini", "gpt-4o"]
+api-endpoint: "" # Custom API endpoint, f.ex. https://models.inference.ai.azure.com
 vat: 1.255
