--- a/chatgpt/base-config.yaml
+++ b/chatgpt/base-config.yaml
@@ -1,8 +1,9 @@
-# OPENAI API key
+# OpenRouter API key
 api-key: ""
 bot-name: "" # Matrix ID, f.ex @test:test.io
 bot-display-name: "" # Display name, f.ex Test
-model: "gpt-4o-mini"
-allowed_models: ["o1-mini", "gpt-4o-mini", "gpt-4o"]
-api-endpoint: "" # Custom API endpoint, f.ex. https://models.inference.ai.azure.com
+model: "openai/gpt-4o"
+max_price_per_token: 0.000005  # Maximum allowed price per completion token
+site_url: "" # Your site URL for rankings on openrouter.ai
+site_name: "" # Your site name for rankings on openrouter.ai
 vat: 1.255
