--- a/chatgpt/maubot.yaml
+++ b/chatgpt/maubot.yaml
@@ -1,6 +1,6 @@
 maubot: 0.1.0
 id: fi.24-7.chatgpt
-version: 1.1.50
+version: 1.1.52
 name: ChatGPT Plugin
 description: A Matrix Maubot plugin to chat with ChatGPT
 main_class: ChatGPTBot
@@ -10,7 +10,7 @@ config: true
 extra_files:
   - base-config.yaml
 dependencies:
-  - openai
+  - openai>=1.0.0
   - emoji
   - fmi-weather-client
 database: true
